--- a/compose.yaml
+++ b/compose.yaml
@@ -27,7 +27,8 @@ services:
     restart: unless-stopped
     tty: true
     stdin_open: true
-
+  backend:
+    build: python_backend/Dockerfile
 volumes:
   pgdata:
     driver: local
