--- a/compose.yaml
+++ b/compose.yaml
@@ -29,6 +29,9 @@ services:
     stdin_open: true
   backend:
     build: python_backend/Dockerfile
+    image: backend_image
+    ports:
+      - "1234:1234"
 volumes:
   pgdata:
     driver: local
