--- a/compose.yaml
+++ b/compose.yaml
@@ -7,8 +7,8 @@ services:
       POSTGRES_PASSWORD: postgres_password
       POSTGRES_DB: postgres_db
       PGDATA: /var/lib/postgresql/data/pgdata
-    ports:
-      - "5430:5432"
+#    ports:
+#      - "5430:5432"
     volumes:
       - ~/pgdata_local:/var/lib/postgresql/data/pgdata
     command: >
@@ -27,11 +27,38 @@ services:
     restart: unless-stopped
     tty: true
     stdin_open: true
+    networks:
+      - dockerized_network
+    hostname: postgres
   backend:
     build:
       dockerfile: ./python_backend/Dockerfile
+#    ports:
+#      - "1234:1234"
+    networks:
+      - dockerized_network
+    hostname: backend
+  frontend:
+    build:
+      dockerfile: ./python_frontend/Dockerfile
+#    ports:
+#      - "1235:1235"
+    networks:
+      - dockerized_network
+    hostname: frontend
+  proxy:
+    image: nginx:latest
     ports:
-      - "1234:1234"
+      - "80:80" # map internal port 80 to external port 80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf # use custom nginx config
+    networks:
+      - dockerized_network
+    hostname: proxy
 volumes:
   pgdata:
     driver: local
+
+networks:
+  dockerized_network:
+
