--- a/python_backend/Dockerfile
+++ b/python_backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.12
 WORKDIR /code
-COPY ./project/requirements.txt /code/requirements.txt
+COPY python_backend/project/requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
-COPY ./project/backend.py /code/
+COPY python_backend/project/backend.py /code/
 CMD ["python", "backend.py"]
-ENTRYPOINT ["python","./backend.py"]
+ENTRYPOINT ["python","backend.py"]
