--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,21 @@
-
-
 events {
     worker_connections 4096; ## я внатуре не знаю зачем это здесь
 }
 
 http {
 
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+        proxy_http_version 1.1; # бойлерплейт со стака
+        proxy_set_header Upgrade $http_upgrade; # - чтобы заработал nicegui
+        proxy_set_header Connection "Upgrade"; # - чтобы заработал nicegui
+
         server {
-            listen 80;
-            listen [::]:80;
+            listen 80; # порт прослушки ип4
+            listen [::]:80; # - ип6
             location / {
-                proxy_pass http://frontend:1235;
+                proxy_pass http://frontend:1235; # переадрес на фронт
                 }
             location /api/ {
-                proxy_pass http://backend:1234;
+                proxy_pass http://backend:1234; # переадрес на бэк - на всякий случай, если захочется подёргать ручки в ручном режиме
                 }
         }
 }
