--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,7 @@
 services:
+  # сервис постгреса
+  # подключён в единую сетку
+  # порты "наружу" не светим
   postgres:
     image: postgres:latest
     container_name: postgres_container
@@ -7,8 +10,6 @@ services:
       POSTGRES_PASSWORD: postgres_password
       POSTGRES_DB: postgres_db
       PGDATA: /var/lib/postgresql/data/pgdata
-#    ports:
-#      - "5430:5432"
     volumes:
       - ~/pgdata_local:/var/lib/postgresql/data/pgdata
     command: >
@@ -30,22 +31,29 @@ services:
     networks:
       - dockerized_network
     hostname: postgres
+
+  # билдим с помощью докерфайла, порты наружу - не светим
+  # подключаем в единую сетку
   backend:
     build:
       dockerfile: ./python_backend/Dockerfile
-#    ports:
-#      - "1234:1234"
     networks:
       - dockerized_network
     hostname: backend
+
+
+  # билдим с помощью докерфайла, порты наружу - не светим
+  # подключаем в единую сетку
   frontend:
     build:
       dockerfile: ./python_frontend/Dockerfile
-#    ports:
-#      - "1235:1235"
     networks:
       - dockerized_network
     hostname: frontend
+
+  # reverse proxy в виде ngnix
+  # только он виден внешнему миру через 80ый порт (который собственным конфигом вообще в ноль превращается)
+  # также подключен к сетке контейнеров чтобы увидеть фронт и бэк
   proxy:
     image: nginx:latest
     ports:
@@ -55,10 +63,13 @@ services:
     networks:
       - dockerized_network
     hostname: proxy
+
+# подключение волюмы для внешнего хранения данных постгресса
 volumes:
   pgdata:
     driver: local
 
+# декларация сетки, в которой будут работать контейнеры
 networks:
   dockerized_network:
 
